# metadata-refiner

./: Dockerfile  README.md  docker-compose.yaml  dot_env_example  pyproject.toml
.github/workflows/: docker-image.yml  image-push.yml  test.yml
src/: cbs_refiner.py  dataverse_nl_refiner.py  main.py  queries.py  sicada_refiner.py  utils.py  version.py
src/data/: DSC_table.csv
src/refiners/: cbs_refiner.py  cid_refiner.py  datastation_refiner.py  dataverse_nl_refiner.py  liss_refiner.py
src/schema/: input.py
src/tests/: test_cbs_refiner.py  test_cid_refiner.py  test_datastation_refiner.py  test_dataverse_nl_refiner.py  test_liss_refiner.py
tests/: test_cbs_refiner.py  test_dataverse_nl_refiner.py  test_refiner.py
