[tool.poetry]
name = "metadata-refiner"
version = "1.0.5"
description = "A project allowing one to set up a FastAPI based Microservice, using cookiecutter"
authors = ["Thomas van Erven"]

[tool.poetry.dependencies]
python = "^3.9.14"
uvicorn = "^0.22.0"
pydantic = "^1.10.8"
fastapi = "^0.95.2"
pytest = "^7.3.1"
requests = "^2.31.0"
dynaconf = "^3.1.11"
tomli = "^2.0.1"

[tool.poetry.dev-dependencies]
ipython = "^8.5.0"
black = "^22.8.0"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
