[tool.poetry]
name = "metadata-refiner"
version = "1.3.1"
description = "A service that refines metadata."
authors = ["Thomas van Erven"]

[tool.poetry.dependencies]
python = "^3.9.14"
uvicorn = "^0.22.0"
pydantic = "^1.10.8"
fastapi = "^0.99.0"
pytest = "^7.4.0"
requests = "^2.31.0"
dynaconf = "^3.1.11"
tomli = "^2.0.1"

[tool.poetry.dev-dependencies]
ipython = "^8.5.0"
black = "^23.3.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
