[tool.poetry]
name = "metadata-refiner"
version = "1.4.1"
description = "A service that refines metadata."
authors = ["Fjodor van Rijsselberg"]

[tool.poetry.dependencies]
python = "^3.12.5"
uvicorn = "^0.30.6"
pydantic = "^2.8.2"
fastapi = "^0.112.2"
pytest = "^8.3.2"
requests = "^2.31.0"
dynaconf = "^3.1.11"
tomli = "^2.0.1"
jmespath = "^1.0.1"

[tool.poetry.dev-dependencies]
ipython = "^8.27.0"
black = "^24.8.0"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
